--- a/src/main/webapp/app/entities/payment/list/payment.component.html
+++ b/src/main/webapp/app/entities/payment/list/payment.component.html
@@ -1,106 +1,66 @@
-<div>
-  <h2 id="page-heading" data-cy="PaymentHeading">
-    <span jhiTranslate="sellphonealamApp.payment.home.title">Payments</span>
-
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info mr-2" (click)="loadPage()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="sellphonealamApp.payment.home.refreshListLabel">Refresh List</span>
-      </button>
-
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-payment"
-        [routerLink]="['/payment/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="sellphonealamApp.payment.home.createLabel"> Create a new Payment </span>
-      </button>
+<div class="col-12 p-0 mt-4">
+  <div class="col">
+    <h2 style="font-size: 25px; font-family: Verdana, Geneva, Tahoma, sans-serif; text-decoration: underline">Quản lí hóa đơn</h2>
+    <div class="m-2" *ngIf="isLoading">
+      <div class="pull-right label label-info row col" style="min-height: 700px !important">
+        <!-- <div class="loader"></div> -->
+        <div
+          class="spinner-border"
+          role="status"
+          style="margin: auto; width: 6em; height: 6em; border: 0.7em solid black currentColor"
+        ></div>
+      </div>
     </div>
-  </h2>
-
-  <jhi-alert-error></jhi-alert-error>
-
-  <jhi-alert></jhi-alert>
-
-  <div class="alert alert-warning" id="no-result" *ngIf="payments?.length === 0">
-    <span jhiTranslate="sellphonealamApp.payment.home.notFound">No payments found</span>
-  </div>
-
-  <div class="table-responsive" id="entities" *ngIf="payments && payments.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadPage.bind(this)">
-          <th scope="col" jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="orderDetailID">
-            <span jhiTranslate="sellphonealamApp.payment.orderDetailID">Order Detail ID</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="bankID">
-            <span jhiTranslate="sellphonealamApp.payment.bankID">Bank ID</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="status">
-            <span jhiTranslate="sellphonealamApp.payment.status">Status</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let payment of payments; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/payment', payment.id, 'view']">{{ payment.id }}</a>
+    <div class="m-2">
+      <!--      <mat-form-field>-->
+      <!--        <mat-label>Tìm kiếm</mat-label>-->
+      <!--        <input matInput type="text" (keyup)="search($event)" />-->
+      <!--      </mat-form-field>-->
+      <table mat-table [dataSource]="listData" matSort class="mat-elevation-z8" style="width: 1383px">
+        <ng-container matColumnDef="userName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 7%">Tên khách hàng</th>
+          <td mat-cell *matCellDef="let row">{{ row.userName }}</td>
+        </ng-container>
+        <ng-container matColumnDef="orderAddress">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 19%">Địa chỉ nhận</th>
+          <td mat-cell *matCellDef="let row">{{ row.orderAddress }}</td>
+        </ng-container>
+        <ng-container matColumnDef="orderPhone">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 8%">Số điện thoại</th>
+          <td mat-cell *matCellDef="let row">{{ row.orderPhone }}</td>
+        </ng-container>
+        <ng-container matColumnDef="totalAmount">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 5%">Tổng thanh toán</th>
+          <td mat-cell *matCellDef="let row">{{ row.totalAmount | currency: 'VND' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="createdDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 9%">Ngày đặt hàng</th>
+          <td mat-cell *matCellDef="let row">{{ row.createdDate | date: 'dd-MM-yyyy' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%">Trạng thái</th>
+          <td mat-cell *matCellDef="let row">{{ getStatus(row.status) }}</td>
+        </ng-container>
+        <ng-container matColumnDef="view">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">Xem</th>
+          <td mat-cell *matCellDef="let row">
+            <a>
+              <fa-icon [icon]="'file-invoice-dollar'" [size]="'2x'" (click)="edit(row)" tooltip="Sửa"></fa-icon>
+            </a>
           </td>
-          <td>{{ payment.orderID }}</td>
-          <td>{{ payment.bankID }}</td>
-          <td>{{ payment.status }}</td>
-          <td class="text-right">
-            <div class="btn-group">
-              <button
-                type="submit"
-                [routerLink]="['/payment', payment.id, 'view']"
-                class="btn btn-info btn-sm"
-                data-cy="entityDetailsButton"
-              >
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-              </button>
-
-              <button
-                type="submit"
-                [routerLink]="['/payment', payment.id, 'edit']"
-                class="btn btn-primary btn-sm"
-                data-cy="entityEditButton"
-              >
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-              </button>
-
-              <button type="submit" (click)="delete(payment)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-              </button>
-            </div>
+        </ng-container>
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">Xoá</th>
+          <td mat-cell *matCellDef="let row">
+            <a>
+              <fa-icon [icon]="'trash'" [size]="'2x'" (click)="delete(row, row.name)" tooltip="Xóa"></fa-icon>
+            </a>
           </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div *ngIf="payments && payments.length > 0">
-    <div class="row justify-content-center">
-      <jhi-item-count [params]="{ page: page, totalItems: totalItems, itemsPerPage: itemsPerPage }"></jhi-item-count>
-    </div>
-
-    <div class="row justify-content-center">
-      <ngb-pagination
-        [collectionSize]="totalItems"
-        [(page)]="ngbPaginationPage"
-        [pageSize]="itemsPerPage"
-        [maxSize]="5"
-        [rotate]="true"
-        [boundaryLinks]="true"
-        (pageChange)="loadPage($event)"
-      ></ngb-pagination>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="columns"></tr>
+        <tr mat-row *matRowDef="let row; columns: columns"></tr>
+      </table>
+      <mat-paginator [length]="productsLength" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"> </mat-paginator>
     </div>
   </div>
 </div>
