--- a/src/main/webapp/app/entities/payment/update/payment-update.component.html
+++ b/src/main/webapp/app/entities/payment/update/payment-update.component.html
@@ -1,58 +1,42 @@
-<div class="row justify-content-center">
-  <div class="col-8">
-    <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-payment-heading" data-cy="PaymentCreateUpdateHeading" jhiTranslate="sellphonealamApp.payment.home.createOrEditLabel">
-        Create or edit a Payment
-      </h2>
-
-      <div>
-        <jhi-alert-error></jhi-alert-error>
-
-        <div class="form-group" [hidden]="editForm.get('id')!.value == null">
-          <label class="form-control-label" jhiTranslate="global.field.id" for="field_id">ID</label>
-          <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
-        </div>
-
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="sellphonealamApp.payment.orderDetailID" for="field_orderDetailID"
-            >Order Detail ID</label
-          >
-          <input
-            type="number"
-            class="form-control"
-            name="orderDetailID"
-            id="field_orderDetailID"
-            data-cy="orderDetailID"
-            formControlName="orderDetailID"
-          />
-        </div>
-
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="sellphonealamApp.payment.bankID" for="field_bankID">Bank ID</label>
-          <input type="number" class="form-control" name="bankID" id="field_bankID" data-cy="bankID" formControlName="bankID" />
-        </div>
-
-        <div class="form-group">
-          <label class="form-control-label" jhiTranslate="sellphonealamApp.payment.status" for="field_status">Status</label>
-          <input type="number" class="form-control" name="status" id="field_status" data-cy="status" formControlName="status" />
-        </div>
-      </div>
-
-      <div>
-        <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
-          <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-        </button>
-
-        <button
-          type="submit"
-          id="save-entity"
-          data-cy="entityCreateSaveButton"
-          [disabled]="editForm.invalid || isSaving"
-          class="btn btn-primary"
-        >
-          <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-        </button>
-      </div>
-    </form>
-  </div>
+<div class="modal-header">
+  <h2 class="modal-title p-0">Chi tiết đơn hàng</h2>
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
+</div>
+<div class="modal-body">
+  <h4 style="float: right">Tổng tiền: {{ payment.totalAmount | currency: 'VND' }}</h4>
+  <table mat-table [dataSource]="listData" matSort class="mat-elevation-z8" style="width: 885px">
+    <ng-container matColumnDef="index" style="width: 8%">
+      <th mat-header-cell *matHeaderCellDef style="width: 10%">STT</th>
+      <td mat-cell *matCellDef="let row; let i = index">{{ i + 1 }}</td>
+    </ng-container>
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef style="width: 8%"></th>
+      <td mat-cell *matCellDef="let row">
+        <img [src]="row.image" class="img-fluid" style="width: 40px" />
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef style="width: 8%">Sản phẩm</th>
+      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef style="width: 8%">Số lượng</th>
+      <td mat-cell *matCellDef="let row">{{ row.quantity }}</td>
+    </ng-container>
+    <ng-container matColumnDef="total">
+      <th mat-header-cell *matHeaderCellDef style="width: 4%">Giá</th>
+      <td mat-cell *matCellDef="let row">{{ row.total | currency: 'VND' }}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columns"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns"></tr>
+  </table>
+</div>
+<div class="d-flex m-2">
+  <button mat-raised-button color="primary" *ngIf="payment.status === 0 || !payment.status" (click)="confirm()" class="col-2 ml-2">
+    Xác nhận đơn
+  </button>
+  <button mat-raised-button color="warn" *ngIf="payment.status === 0 || !payment.status" (click)="cancel()" class="col-2 ml-2">
+    Huỷ đơn
+  </button>
+  <button mat-raised-button color="accent" *ngIf="payment.status === 1" (click)="paid()" class="col-2 ml-2">Đã Thanh Toán</button>
 </div>
