--- a/src/main/webapp/app/entities/payment/update/payment-update.component.html
+++ b/src/main/webapp/app/entities/payment/update/payment-update.component.html
@@ -10,7 +10,7 @@
       <td mat-cell *matCellDef="let row; let i = index">{{ i + 1 }}</td>
     </ng-container>
     <ng-container matColumnDef="image">
-      <th mat-header-cell *matHeaderCellDef style="width: 8%"></th>
+      <th mat-header-cell *matHeaderCellDef style="width: 8%">Ảnh</th>
       <td mat-cell *matCellDef="let row">
         <img [src]="row.image" class="img-fluid" style="width: 40px" />
       </td>
@@ -31,7 +31,7 @@
     <tr mat-row *matRowDef="let row; columns: columns"></tr>
   </table>
 </div>
-<div class="d-flex m-2">
+<div class="d-flex m-2" *jhiHasAnyAuthority="'ROLE_ADMIN'">
   <button
     mat-raised-button
     color="primary"
