--- a/src/main/webapp/app/admin/health/modal/health-modal.component.html
+++ b/src/main/webapp/app/admin/health/modal/health-modal.component.html
@@ -3,7 +3,7 @@
     {{ 'health.indicator.' + health.key | translate }}
   </h4>
 
-  <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="dismiss()">
+  <button aria-label="Close" data-dismiss="modal" class="close modal__btn" type="button" (click)="dismiss()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
