--- a/src/main/webapp/app/admin/metrics/blocks/metrics-modal-threads/metrics-modal-threads.component.html
+++ b/src/main/webapp/app/admin/metrics/blocks/metrics-modal-threads/metrics-modal-threads.component.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
   <h4 class="modal-title" jhiTranslate="metrics.jvm.threads.dump.title">Threads dump</h4>
 
-  <button type="button" class="close" (click)="dismiss()">&times;</button>
+  <button type="button" class="modal__btn close" (click)="dismiss()">&times;</button>
 </div>
 
 <div class="modal-body">
