--- a/src/main/webapp/app/entities/payment/update/payment-update.component.html
+++ b/src/main/webapp/app/entities/payment/update/payment-update.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h2 class="modal-title p-0">Chi tiết đơn hàng</h2>
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
+  <button type="button" class="modal__btn close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
 </div>
 <div class="modal-body">
   <h4 style="float: right">Tổng tiền: {{ payment.totalAmount | currency: 'VND' }}</h4>
