--- a/src/main/webapp/app/layouts/childs/list-pro-2/lstpro2.component.scss
+++ b/src/main/webapp/app/layouts/childs/list-pro-2/lstpro2.component.scss
@@ -30,3 +30,11 @@
 .banner-set {
   height: 362px;
 }
+
+.border-fix {
+  border: 1px solid rgb(235, 235, 235);
+  border-radius: 15px;
+  box-shadow: 0 0 6px rgb(226, 226, 226);
+  padding: 20px 5px 5px 15px;
+  width: 1157px;
+}
