--- a/src/main/webapp/app/shared/modal/voucher/list/voucher.component.html
+++ b/src/main/webapp/app/shared/modal/voucher/list/voucher.component.html
@@ -1,7 +1,14 @@
 <div class="bossWrapp">
-  <div class="cardTitle">
+  <div class="cardTitle modal-header">
     MÃ GIẢM GIÁ
-    <button type="button" class="close" style="padding-left: 740px" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">
+    <button
+      type="button"
+      class="modal__btn close"
+      style="padding-left: 740px"
+      data-dismiss="modal"
+      aria-hidden="true"
+      (click)="closePopup()"
+    >
       &times;
     </button>
   </div>
