--- a/src/main/webapp/app/account/settings/settings.component.scss
+++ b/src/main/webapp/app/account/settings/settings.component.scss
@@ -18,3 +18,10 @@
   overflow: hidden;
   max-width: 80px;
 }
+
+.border-fix {
+  border: 1px solid rgb(235, 235, 235);
+  border-radius: 15px;
+  min-height: 470px;
+  box-shadow: 0 0 6px rgb(226, 226, 226);
+}
