--- a/src/main/webapp/app/admin/user-management/update/user-management-update.component.html
+++ b/src/main/webapp/app/admin/user-management/update/user-management-update.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h2 class="modal-title m-0">{{ user.id ? 'Sửa tài khoản' : 'Thêm tài khoản' }}</h2>
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
+  <button type="button" class="modal__btn close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
 </div>
 <div class="modal-body">
   <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
@@ -36,21 +36,9 @@
             </small>
           </div>
         </div>
-        <!--      <div class="form-group">-->
-        <!--        <label for="name">Mật khẩu:</label>-->
-        <!--        <input-->
-        <!--          type="text"-->
-        <!--          name="name"-->
-        <!--          id="name"-->
-        <!--          [ngClass]="{ 'is-invalid': !user.login }"-->
-        <!--          [(ngModel)]="user.login"-->
-        <!--          class="form-control"-->
-        <!--        />-->
-        <!--        <small *ngIf="!user.login" class="text-danger">Tên sản phẩm không hợp lệ</small>-->
-        <!--      </div>-->
       </div>
       <div class="col-md-6 text-center">
-        <img [src]="url" width="200px" id="blah" class="img-fluid" alt="ảnh" />
+        <img [src]="url" width="200px" id="blah" class="img-fluid img-avatar" alt="ảnh" />
         <div class="input-group col-10 offset-1 mt-10">
           <label for="inputGroupFile01" class="ml-120 btn btn-dark">Chọn ảnh</label>
           <input type="file" accept="image/*" (change)="readUrl($event)" class="form-control d-none" id="inputGroupFile01" />
