--- a/src/main/webapp/app/entities/voucher/update/voucher-update.component.html
+++ b/src/main/webapp/app/entities/voucher/update/voucher-update.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h2 class="modal-title m-0">{{ voucher.id ? 'Sửa mã giảm' : 'Thêm mã giảm' }}</h2>
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
+  <button type="button" class="modal__btn close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
 </div>
 <div class="modal-body">
   <input type="hidden" />
