--- a/src/main/webapp/app/layouts/childs/list-pro-2/lstpro2.component.html
+++ b/src/main/webapp/app/layouts/childs/list-pro-2/lstpro2.component.html
@@ -1,20 +1,11 @@
 <!--khung to và cũng for-->
 <div class="arrivals-product pb-85 pb-sm-45 mt-50">
   <div class="container">
-    <div class="main-product-tab-area">
+    <div class="main-product-tab-area border-fix">
       <div class="tab-menu mb-25">
         <div class="section-ttitle">
           <h2>Sản phẩm mới nhất</h2>
         </div>
-        <!-- Nav tabs -->
-        <ul class="nav tabs-area" role="tablist">
-          <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#electronics">Smart Phone </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#kids">Laptop</a>
-          </li>
-        </ul>
       </div>
 
       <!-- Tab Contetn Start -->
@@ -66,11 +57,8 @@
                       </div>
                     </div>
                     <div class="pro-actions">
-                      <div class="actions-primary">
+                      <div class="actions-primary mt-5">
                         <a title="Thêm vào giỏ hàng" (click)="addToCart(product)"> + Thêm vào giỏ hàng</a>
-                      </div>
-                      <div class="actions-secondary">
-                        <a href="#" title="WishList"><i class="lnr lnr-heart"></i> <span>Thêm vào yêu thích</span></a>
                       </div>
                     </div>
                   </div>
