--- a/src/main/webapp/app/layouts/childs/list-pro/lstpro.component.scss
+++ b/src/main/webapp/app/layouts/childs/list-pro/lstpro.component.scss
@@ -15,3 +15,10 @@
   width: 265px;
   height: 290px;
 }
+
+.border-fix {
+  border: 1px solid rgb(235, 235, 235);
+  border-radius: 5px;
+  box-shadow: 0 0 6px rgb(226, 226, 226);
+  //width: 1200px;
+}
