--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -238,12 +238,6 @@
           ></a
         >
       </li>
-      <li>
-        <a routerLink="/" class="nav-link">
-          <i class="lnr lnr-heart"></i>
-          <span>Yêu Thích</span>
-        </a>
-      </li>
       <li
         ngbDropdown
         class="nav-item dropdown pointer"
@@ -311,19 +305,21 @@
         <nav class="d-none d-lg-block">
           <ul class="header-bottom-list d-flex">
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_SMART_PHONE)">Điện thoại</a>
+              <a routerLink="/product-client" routerLinkActive="active" (click)="changeSearch(TypeID.PRODUCT_SMART_PHONE)">Điện thoại</a>
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_LAPTOP)">Laptop<i class="fa fa-angle-down"></i></a>
+              <a routerLink="/product-client" routerLinkActive="active" (click)="changeSearch(TypeID.PRODUCT_LAPTOP)">Laptop</a>
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_TAPBLET)">Tablet</a>
+              <a routerLink="/product-client" routerLinkActive="active" (click)="changeSearch(TypeID.PRODUCT_TAPBLET)">Tablet</a>
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_SMART_WATCH)">Phụ kiện</a>
+              <a routerLink="/product-client" routerLinkActive="active" (click)="changeSearch(TypeID.PRODUCT_SMART_WATCH)"
+                >Đồng hồ thông minh</a
+              >
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_ACCESSORY)">Đồng hồ thông minh</a>
+              <a routerLink="/product-client" routerLinkActive="active" (click)="changeSearch(TypeID.PRODUCT_ACCESSORY)">Phụ kiện</a>
             </li>
           </ul>
         </nav>
