--- a/src/main/webapp/app/product-for-client/list/product-for-client.component.scss
+++ b/src/main/webapp/app/product-for-client/list/product-for-client.component.scss
@@ -11,3 +11,10 @@
 .modal-header {
   border: none;
 }
+
+.border-fix {
+  border: 1px solid rgb(235, 235, 235);
+  border-radius: 5px;
+  box-shadow: 0 0 6px rgb(226, 226, 226);
+  //width: 1200px;
+}
