--- a/src/main/webapp/app/product-for-client/update/product-update.component.html
+++ b/src/main/webapp/app/product-for-client/update/product-update.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
+  <button type="button" class="modal__btn close" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">&times;</button>
 </div>
 <div class="main-product-thumbnail ptb-50 ptb-sm-60">
   <div class="container">
