--- a/src/main/webapp/app/shared/modal/modalCart/moda-cart.scss
+++ b/src/main/webapp/app/shared/modal/modalCart/moda-cart.scss
@@ -12,6 +12,14 @@
   border: none;
 }
 
+.border-fix {
+  border: 1px solid rgb(235, 235, 235);
+  border-radius: 15px;
+  padding: 5px;
+  width: 82px;
+  box-shadow: 0 0 6px rgb(226, 226, 226);
+}
+
 //.cookiesContent {
 //  width: 320px;
 //  display: flex;
